# InoLabel

./: .gitignore  =0.21.0  AGENTS.md  DESIGN.md  InoLabel.spec  LAUNCH_FIXES.md  LAUNCH_SUMMARY.md  PRODUCT.md  README.md  TECH_VERIFICATION.md  VERIFICATION_ANNOTATION_MODES.md  api_server.py  build.ps1  build.py  build.sh  convert_coco_to_yolo_dataset.py  instrucao.txt  main.py  package-lock.json  requirements.txt
.impeccable/: design.json
APLICATIVO/: .gitignore  README.md
app/: AGENTS.md  STRUCTURE.md  __init__.py  annotation_tool.py  config.py  dataset_export.py  models.py  runner.py  startup_dialog.py
backend/: config.py  dataset_export.py  geometry.py  main.py  models.py
frontend/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
output/: .inolabel.json
tests/: main_test.py  test_annotation_storage_perf.py  test_api_contract.py  test_class_order.py  test_class_removal.py  test_classification_dataset.py  test_components.py  test_dataset_export.py  test_export_audit.py  test_export_improvements.py  test_keybinds.py  test_lab_notebook_design_contract.py  test_mode_specific_contracts.py  test_model_class_mapping.py  test_obb_geometry.py  test_obb_tool_contract.py  test_output_state.py  test_palette.py  test_scale.py  test_session_config.py  test_session_installer.py  test_session_start_audit.py  test_startup_cache.py  test_theme.py  test_theme_compat.py  test_tracker_matching_fallbacks.py  test_yolo_export_safety.py  test_yolo_obb_export.py
(+318 files in other folders)
