[package]
name = "inolabel"
version = "2.0.0"
description = "InoLabel – annotation tool"
authors = ["Inovisão"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "inolabel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
panic = "abort"
codegen-units = 1
lto = true
strip = true
